# sensorReader

./: CMakeLists.txt
Task/: README.md  sensor_sender.py
sensorServer/src/: logsensors.cpp  logsensors.h  main.cpp  sensor.cpp  sensor.h  sensordata.cpp  sensordata.h  sensordataconverter.cpp  sensordataconverter.h  sensorreadserver.cpp  sensorreadserver.h  sensorrequestserver.cpp  sensorrequestserver.h  sensors.cpp  sensors.h  udpserver.cpp  udpserver.h
